--- a/package.json
+++ b/package.json
@@ -18,20 +18,45 @@
 		"typecheck": "tsc --noEmit"
 	},
 	"dependencies": {
+		"@monaco-editor/react": "^4.7.0",
+		"@radix-ui/react-dialog": "^1.1.15",
+		"@radix-ui/react-scroll-area": "^1.2.10",
+		"@radix-ui/react-separator": "^1.1.7",
+		"@radix-ui/react-slot": "^1.2.3",
+		"@radix-ui/react-tabs": "^1.1.13",
+		"@radix-ui/react-tooltip": "^1.2.8",
 		"@t3-oss/env-nextjs": "^0.12.0",
 		"@tanstack/react-query": "^5.69.0",
 		"@trpc/client": "^11.0.0",
 		"@trpc/react-query": "^11.0.0",
 		"@trpc/server": "^11.0.0",
+		"@typefox/monaco-editor-react": "^7.2.0",
+		"@webcontainer/api": "1.6.1-internal.1",
+		"@xterm/addon-fit": "^0.10.0",
+		"@xterm/addon-web-links": "^0.11.0",
+		"@xterm/xterm": "^5.5.0",
+		"@zenfs/core": "^2.4.2",
+		"@zenfs/dom": "^1.2.5",
 		"better-auth": "^1.3.31",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
 		"drizzle-orm": "^0.41.0",
-		"next": "^15.2.3",
+		"immer": "^10.1.3",
+		"lucide-react": "^0.548.0",
+		"monaco-editor-wrapper": "^6.12.0",
+		"next": "16.0.0",
+		"next-themes": "^0.4.6",
 		"postgres": "^3.4.4",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"react-resizable-panels": "^3.0.6",
 		"server-only": "^0.0.1",
+		"sonner": "^2.0.7",
 		"superjson": "^2.2.1",
-		"zod": "^3.24.2"
+		"tailwind-merge": "^3.3.1",
+		"vscode-icons-js": "^11.6.1",
+		"zod": "^3.24.2",
+		"zustand": "^5.0.8"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
@@ -42,6 +67,7 @@
 		"drizzle-kit": "^0.30.5",
 		"postcss": "^8.5.3",
 		"tailwindcss": "^4.0.15",
+		"tw-animate-css": "^1.4.0",
 		"typescript": "^5.8.2"
 	},
 	"ct3aMetadata": {
