--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
 		"@types/react": "^19.0.0",
 		"@types/react-dom": "^19.0.0",
 		"drizzle-kit": "^0.30.5",
+		"monaco-editor": "^0.54.0",
 		"postcss": "^8.5.3",
 		"tailwindcss": "^4.0.15",
 		"tw-animate-css": "^1.4.0",
