--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,6 @@ BETTER_AUTH_URL="http://localhost:3000"
 
 # Next Public
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
+
+# OpenRouter
+OPENROUTER_API_KEY="your-openrouter-api-key"
