--- a/package.json
+++ b/package.json
@@ -1,78 +1,83 @@
 {
-	"name": "calhacks-2025",
-	"version": "0.1.0",
-	"private": true,
-	"type": "module",
-	"scripts": {
-		"build": "next build",
-		"check": "biome check .",
-		"check:unsafe": "biome check --write --unsafe .",
-		"check:write": "biome check --write .",
-		"db:generate": "drizzle-kit generate",
-		"db:migrate": "drizzle-kit migrate",
-		"db:push": "drizzle-kit push",
-		"db:studio": "drizzle-kit studio",
-		"dev": "next dev --turbo",
-		"preview": "next build && next start",
-		"start": "next start",
-		"typecheck": "tsc --noEmit"
-	},
-	"dependencies": {
-		"@monaco-editor/react": "^4.7.0",
-		"@radix-ui/react-dialog": "^1.1.15",
-		"@radix-ui/react-scroll-area": "^1.2.10",
-		"@radix-ui/react-separator": "^1.1.7",
-		"@radix-ui/react-slot": "^1.2.3",
-		"@radix-ui/react-tabs": "^1.1.13",
-		"@radix-ui/react-tooltip": "^1.2.8",
-		"@t3-oss/env-nextjs": "^0.12.0",
-		"@tanstack/react-query": "^5.69.0",
-		"@trpc/client": "^11.0.0",
-		"@trpc/react-query": "^11.0.0",
-		"@trpc/server": "^11.0.0",
-		"@typefox/monaco-editor-react": "^7.2.0",
-		"@webcontainer/api": "1.6.1-internal.1",
-		"@xterm/addon-fit": "^0.10.0",
-		"@xterm/addon-web-links": "^0.11.0",
-		"@xterm/xterm": "^5.5.0",
-		"@zenfs/core": "^2.4.2",
-		"@zenfs/dom": "^1.2.5",
-		"better-auth": "^1.3.31",
-		"class-variance-authority": "^0.7.1",
-		"clsx": "^2.1.1",
-		"drizzle-orm": "^0.41.0",
-		"immer": "^10.1.3",
-		"lucide-react": "^0.548.0",
-		"monaco-editor-wrapper": "^6.12.0",
-		"next": "16.0.0",
-		"next-themes": "^0.4.6",
-		"postgres": "^3.4.4",
-		"react": "^19.0.0",
-		"react-dom": "^19.0.0",
-		"react-resizable-panels": "^3.0.6",
-		"server-only": "^0.0.1",
-		"sonner": "^2.0.7",
-		"superjson": "^2.2.1",
-		"tailwind-merge": "^3.3.1",
-		"vscode-icons-js": "^11.6.1",
-		"zod": "^3.24.2",
-		"zustand": "^5.0.8"
-	},
-	"devDependencies": {
-		"@biomejs/biome": "1.9.4",
-		"@tailwindcss/postcss": "^4.0.15",
-		"@types/node": "^20.14.10",
-		"@types/react": "^19.0.0",
-		"@types/react-dom": "^19.0.0",
-		"drizzle-kit": "^0.30.5",
-		"monaco-editor": "^0.54.0",
-		"postcss": "^8.5.3",
-		"tailwindcss": "^4.0.15",
-		"tw-animate-css": "^1.4.0",
-		"typescript": "^5.8.2"
-	},
-	"ct3aMetadata": {
-		"initVersion": "7.39.3"
-	},
-	"packageManager": "pnpm@10.15.1"
+  "name": "calhacks-2025",
+  "version": "0.1.0",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "build": "next build",
+    "check": "biome check .",
+    "check:unsafe": "biome check --write --unsafe .",
+    "check:write": "biome check --write .",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio",
+    "dev": "next dev --turbo",
+    "preview": "next build && next start",
+    "start": "next start",
+    "typecheck": "tsc --noEmit"
+  },
+  "dependencies": {
+    "@ai-sdk/openai": "^2.0.53",
+    "@monaco-editor/react": "^4.7.0",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@t3-oss/env-nextjs": "^0.12.0",
+    "@tanstack/react-query": "^5.69.0",
+    "@trpc/client": "^11.0.0",
+    "@trpc/react-query": "^11.0.0",
+    "@trpc/server": "^11.0.0",
+    "@typefox/monaco-editor-react": "^7.2.0",
+    "@webcontainer/api": "1.6.1-internal.1",
+    "@xterm/addon-fit": "^0.10.0",
+    "@xterm/addon-web-links": "^0.11.0",
+    "@xterm/xterm": "^5.5.0",
+    "@zenfs/core": "^2.4.2",
+    "@zenfs/dom": "^1.2.5",
+    "ai": "^5.0.78",
+    "better-auth": "^1.3.31",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "diff": "^8.0.2",
+    "drizzle-orm": "^0.41.0",
+    "immer": "^10.1.3",
+    "lucide-react": "^0.548.0",
+    "monaco-editor-wrapper": "^6.12.0",
+    "next": "16.0.0",
+    "next-themes": "^0.4.6",
+    "openai": "^6.7.0",
+    "postgres": "^3.4.4",
+    "react": "^19.0.0",
+    "react-diff-view": "^3.3.2",
+    "react-dom": "^19.0.0",
+    "react-resizable-panels": "^3.0.6",
+    "server-only": "^0.0.1",
+    "sonner": "^2.0.7",
+    "superjson": "^2.2.1",
+    "tailwind-merge": "^3.3.1",
+    "vscode-icons-js": "^11.6.1",
+    "zod": "^3.24.2",
+    "zustand": "^5.0.8"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "1.9.4",
+    "@tailwindcss/postcss": "^4.0.15",
+    "@types/node": "^20.14.10",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "drizzle-kit": "^0.30.5",
+    "monaco-editor": "^0.54.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.15",
+    "tw-animate-css": "^1.4.0",
+    "typescript": "^5.8.2"
+  },
+  "ct3aMetadata": {
+    "initVersion": "7.39.3"
+  },
+  "packageManager": "pnpm@10.15.1"
 }
