--- a/package.json
+++ b/package.json
@@ -19,6 +19,24 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^2.0.53",
+    "@codingame/monaco-vscode-api": "^22.1.3",
+    "@codingame/monaco-vscode-environment-service-override": "^22.1.3",
+    "@codingame/monaco-vscode-explorer-service-override": "^22.1.3",
+    "@codingame/monaco-vscode-files-service-override": "^22.1.3",
+    "@codingame/monaco-vscode-keybindings-service-override": "^22.1.3",
+    "@codingame/monaco-vscode-lifecycle-service-override": "^22.1.3",
+    "@codingame/monaco-vscode-localization-service-override": "^22.1.3",
+    "@codingame/monaco-vscode-outline-service-override": "^22.1.3",
+    "@codingame/monaco-vscode-remote-agent-service-override": "^22.1.3",
+    "@codingame/monaco-vscode-search-result-default-extension": "^22.1.3",
+    "@codingame/monaco-vscode-search-service-override": "^22.1.3",
+    "@codingame/monaco-vscode-secret-storage-service-override": "^22.1.3",
+    "@codingame/monaco-vscode-storage-service-override": "^22.1.3",
+    "@codingame/monaco-vscode-typescript-basics-default-extension": "^22.1.3",
+    "@codingame/monaco-vscode-typescript-language-features-default-extension": "^22.1.3",
+    "@codingame/monaco-vscode-view-banner-service-override": "^22.1.3",
+    "@codingame/monaco-vscode-view-status-bar-service-override": "^22.1.3",
+    "@codingame/monaco-vscode-view-title-bar-service-override": "^22.1.3",
     "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-scroll-area": "^1.2.10",
@@ -46,7 +64,9 @@
     "drizzle-orm": "^0.41.0",
     "immer": "^10.1.3",
     "lucide-react": "^0.548.0",
+    "mitt": "^3.0.1",
     "monaco-editor-wrapper": "^6.12.0",
+    "monaco-languageclient": "^10.2.0",
     "next": "16.0.0",
     "next-themes": "^0.4.6",
     "openai": "^6.7.0",
@@ -59,6 +79,7 @@
     "sonner": "^2.0.7",
     "superjson": "^2.2.1",
     "tailwind-merge": "^3.3.1",
+    "vscode": "npm:@codingame/monaco-vscode-extension-api@^22.1.3",
     "vscode-icons-js": "^11.6.1",
     "zod": "^3.24.2",
     "zustand": "^5.0.8"
