--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "immer": "^10.1.3",
     "lucide-react": "^0.548.0",
     "monaco-editor-wrapper": "^6.12.0",
+    "motion": "^12.23.24",
     "next": "16.0.0",
     "next-themes": "^0.4.6",
     "node-fetch": "^3.3.2",
@@ -59,6 +60,7 @@
     "react-resizable-panels": "^3.0.6",
     "server-only": "^0.0.1",
     "sonner": "^2.0.7",
+    "streamdown": "^1.4.0",
     "superjson": "^2.2.1",
     "tailwind-merge": "^3.3.1",
     "vscode-icons-js": "^11.6.1",
