--- a/biome.jsonc
+++ b/biome.jsonc
@@ -13,12 +13,18 @@
     "lineWidth": 80,
     "ignore": ["drizzle"]
   },
+  "javascript": {
+    "formatter": {
+      "trailingCommas": "all"
+    }
+  },
   "organizeImports": { "enabled": true },
   "linter": {
     "enabled": true,
     "rules": {
       "a11y": {
-        "useKeyWithClickEvents": "off"
+        "useKeyWithClickEvents": "off",
+        "useButtonType": "off"
       },
       "suspicious": {
         "noArrayIndexKey": "off"
