--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-context-menu": "^2.2.16",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-separator": "^1.1.7",
@@ -60,6 +61,7 @@
     "react-dom": "^19.0.0",
     "react-resizable-panels": "^3.0.6",
     "server-only": "^0.0.1",
+    "shiki": "^3.13.0",
     "sonner": "^2.0.7",
     "streamdown": "^1.4.0",
     "superjson": "^2.2.1",
