--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^2.0.37",
     "@ai-sdk/openai": "^2.0.53",
     "@ai-sdk/react": "^2.0.80",
     "@monaco-editor/react": "^4.7.0",
