--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,7 @@ NEXT_PUBLIC_APP_URL="http://localhost:3000"
 
 # OpenRouter
 OPENROUTER_API_KEY="your-openrouter-api-key"
+
+# GitHub OAuth (for exporting to GitHub)
+GITHUB_CLIENT_ID="your-github-client-id"
+GITHUB_CLIENT_SECRET="your-github-client-secret"
