--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react": "^19.0.0",
     "react-diff-view": "^3.3.2",
     "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
     "react-resizable-panels": "^3.0.6",
     "server-only": "^0.0.1",
     "shiki": "^3.13.0",
